turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:1: error: ':' expected but ')' found.
  def setCouleurSol(Color){
                         ^LangtonsAnt:16: error: identifier expected but '}' found.
} 
^